--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
               />
             </div>
           </div>
+          <div class="main my-5 mx-3">
+            <div class="view-all text-white">
+              <div class="row">
+                <div class="col-12 col-md-4 col-lg-3 mb-3" v-for="item in pokemons">
+                  <div class="card text-center text-white">
+                    <img :src="item.sprites.front_default" :alt="item.name">
+                    <label :for="item.name" class="mb-3" style="font-size: 18px;">{{item.name}} - {{item.id}}</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="view-detail text-white">Pokemon detail</div>
+          </div>
         </div>
       </div>
     </div>
@@ -49,7 +62,48 @@
 
       const app = createApp({
         data() {
-          return {};
+          return {
+            pokemons:[]
+          };
+        },
+        methods: {
+          async getPokemons() {
+            try {
+              const response = await fetch(
+                "https://pokeapi.co/api/v2/pokemon/"
+              );
+              if (!response.ok) {
+                throw new Error(`Response status: ${response.status}`);
+              }
+              const json = await response.json();
+              const data = json.results;
+
+              data.forEach((item) => {
+                this.getPokemonDetail(item.name)
+              });
+            } catch (error) {
+              console.log(`error pokemons: ${error}`);
+            }
+          },
+          async getPokemonDetail(pokemon){
+            try {
+              const response = await fetch(
+                `https://pokeapi.co/api/v2/pokemon/${pokemon}`
+              );
+              if (!response.ok) {
+                throw new Error(`Response status: ${response.status}`);
+              }
+              const json = await response.json();
+
+              this.pokemons.push(json)
+              this.pokemons.sort((a,b) => a.id - b.id)
+            } catch (error) {
+              console.log(`error pokemon detail: ${error}`);
+            }
+          }
+        },
+        mounted() {
+          this.getPokemons();
         },
       });
       app.mount("#app");
